# streamlit-components

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini
.streamlit/: config.toml
examples/: component.py
examples/button/: main.py
examples/form/: main.py
examples/header/: main.py
examples/link/: main.py
examples/tab/: main.py
pages/: button.py  code.py  cols.py  divider.py  form.py  header.py  link.py  tab.py  table.py  title.py
scripts/: generate_code.sh  generate_inputs.sh
src/: component.py
src/button/: main.py
src/code/: main.py
src/cols/: main.py
src/divider/: main.py
src/form/: main.py
src/header/: main.py
src/link/: main.py
src/tab/: main.py
src/table/: main.py
src/title/: main.py
tests/unit/: test_button.py  test_code.py  test_cols.py  test_form.py  test_table.py
tests/unit/button/: test_button.py
tests/unit/form/: test_form.py
tests/unit/header/: test_header.py
tests/unit/tab/: test_tab.py
tests/unit/title/: test_title.py
