[tool.poetry]
name = "streamlit-components"
version = "0.1.0"
description = "Just a collection of Streamlit components using the best code practices."
authors = ["Pedro López Mareque <pedro.lopez.mareque@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
streamlit-pydantic = { git = "https://github.com/LukasMasuch/streamlit-pydantic.git", rev = "9f84145b6b6e74cdff3a7815ab75b0464c4d4f24" }

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"
expects = "^0.9.0"
doublex = "^1.9.6.1"
doublex-expects = "^0.7.1"
mypy = "^1.13.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
